--- a/rhttp/rust/Cargo.toml
+++ b/rhttp/rust/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.41.1", features = ["full"] }
 tokio-util = "0.7.12"
 
 [dependencies.reqwest]
+component = { path = "../reqwest" }
 version = "0.12.9"
 default-features = false
 features = [
